Adding tests for read-only Zip file system and posix permissions.